Stop the text in the file list area from wrapping

--- a/src_frontend/static/css/main.css
+++ b/src_frontend/static/css/main.css
@@ -51,6 +51,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    white-space: nowrap;
     width: 100%;
     overflow-y: scroll;
     padding: 0.25rem;
